--- a/{{cookiecutter.repo_name}}/Makefile
+++ b/{{cookiecutter.repo_name}}/Makefile
@@ -1,7 +1,9 @@
 CURRENT_DIR := $(shell pwd)
 
 .PHONY: build-clients
-build-clients: ## build clients for python, java, and javascript
+clients: ## build clients for python, java, and javascript
 	mkdir -p ${CURRENT_DIR}/clients/python
 	manage development.ini swagger extract > ${CURRENT_DIR}/clients/swagger.json
-	docker run -v ${CURRENT_DIR}/clients:/tmp/clients openapitools/openapi-generator-cli:v3.3.0 generate -l python -DpackageName=cbgb_client -DprojectName=cbgb-client -i /tmp/clients/swagger.json -o /tmp/clients/python
+	docker run -v ${CURRENT_DIR}/clients:/tmp/clients openapitools/openapi-generator-cli:v3.3.0 generate -l python -DpackageName={{cookiecutter.project_name}}_client -DprojectName={{cookiecutter.project_name}}-client -i /tmp/clients/swagger.json -o /tmp/clients/python
+	docker run -v ${CURRENT_DIR}/clients:/tmp/clients openapitools/openapi-generator-cli:v3.3.0 generate -l java -DpackageName={{cookiecutter.project_name}}_client -DprojectName={{cookiecutter.project_name}}-client -i /tmp/clients/swagger.json -o /tmp/clients/java
+	docker run -v ${CURRENT_DIR}/clients:/tmp/clients openapitools/openapi-generator-cli:v3.3.0 generate -l javascript -DpackageName={{cookiecutter.project_name}}_client -DprojectName={{cookiecutter.project_name}}-client -i /tmp/clients/swagger.json -o /tmp/clients/javascript
